test/scopes/reject/fail8.rift
let
  type List = Nil

  fn length(l: List): i64 =
    match l with
      | Nil => 0
      | Cons(x, xs) => 1 + length(xs)
in
end

